--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,10 @@ body {
 }
 
 .logo {
-  float: left;
+	float: left;
+	position: relative;
+	left: 7%;
+	top: 2px;
 }
 
 #navigation-container {
@@ -14,8 +17,8 @@ body {
 }
 
 .navigation-bar {
-  background-color: #14CCCA;
-  height: 70px;
+  background-color: #0CE8A4;
+  height: 90px;
   width: 100%;
   position: fixed;
 }
@@ -40,7 +43,9 @@ body {
 
 .navigation-bar li a {
   color: #000000;
-  font-size: 16px;
+  position: relative;
+  top: 10px;
+  font-size: 19px;
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   text-decoration: none;
   line-height: 70px;
